--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+logging.level.org.springframework=debug
+spring.datasource.url=jdbc:sqlserver://fre-lottery-dev.database.windows.net:1433;database=fre-lottery-dev;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+spring.datasource.username=lottery-admin@fre-lottery-dev
+spring.datasource.password=N0PasswdPls
+spring.datasource.hikari.connectionTimeout=300000 
+spring.datasource.hikari.idleTimeout=6000000 
+spring.datasource.hikari.maxLifetime=1800000
+spring.datasource.hikari.maximumPoolSize=20
