--- a/pom.xml
+++ b/pom.xml
@@ -1,43 +1,194 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.4.0</version>
-		<relativePath/> <!-- lookup parent from repository -->
-	</parent>
-	<groupId>com.wm.open.api</groupId>
-	<artifactId>openapigenerator</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>OpenApiModelControllerGenerator</name>
-	<description>Spring Boot Open API to generate model and controller</description>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.4.0</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
+    <groupId>com.wm.open.api</groupId>
+    <artifactId>openapigenerator</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>OpenApiModelControllerGenerator</name>
+    <description>Spring Boot Open API to generate model and controller</description>
 
-	<properties>
-		<java.version>1.8</java.version>
-	</properties>
+    <properties>
+        <java.version>1.8</java.version>
+    </properties>
 
-	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
 
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
+        <!--<dependency>
+            <groupId>io.openapiprocessor</groupId>
+            <artifactId>openapi-processor-spring</artifactId>
+            <version>1.0.0.M20</version>
+
+        </dependency>
+        <dependency>
+            <groupId>com.github.hauner.openapi</groupId>
+            <artifactId>openapi-processor-json</artifactId>
+            <version>1.0.0.M20</version>
+        </dependency>-->
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.squareup.okhttp</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>2.7.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.threeten</groupId>
+            <artifactId>threetenbp</artifactId>
+            <version>1.5.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-annotations</artifactId>
+            <version>1.6.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
+            <version>3.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>3.14.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>logging-interceptor</artifactId>
+            <version>3.14.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.gsonfire</groupId>
+            <artifactId>gson-fire</artifactId>
+            <version>1.7.1</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.1</version>
+        </dependency>
+
+    </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+
+            <plugin>
+                <groupId>io.openapiprocessor</groupId>
+                <artifactId>openapi-processor-maven-plugin</artifactId>
+                <version>1.0.0.M2</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>io.openapiprocessor</groupId>
+                        <artifactId>openapi-processor-spring</artifactId>
+                        <version>1.0.0.M15</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>com.github.hauner.openapi</groupId>
+                        <artifactId>openapi-processor-json</artifactId>
+                        <version>1.0.0.M4</version>
+                    </dependency>
+                </dependencies>
+
+                <configuration>
+                    <apiPath>${project.basedir}/src/main/resources/petstore-simple.json</apiPath>
+                </configuration>
+
+
+                <executions>
+                    <execution>
+                        <id>spring</id>
+                        <phase>generate-sources</phase>
+
+                        <configuration>
+                            <id>spring</id>
+
+                            <!--
+                            <apiPath>${project.basedir}/src/api/openapi.yaml</apiPath>
+                            -->
+                            <options>
+                                <values>
+                                    <targetDir>${project.basedir}/src/main/java/com/wm/open/api/generator/gen</targetDir>
+                                    <!--<mapping>${project.basedir}/src/api/mapping.yaml</mapping>-->
+                                    <parser>OPENAPI4J</parser>
+                                    <showWarnings>true</showWarnings>
+                                </values>
+
+                              <!--  <nested>
+                                    <name>foo</name>
+                                    <values>
+                                        <bar>foo-bar</foobar>
+                                    </values>
+                                </nested>-->
+
+                            </options>
+                        </configuration>
+
+                        <goals>
+                            <goal>process</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <!--  <version>1.0.0.M2</version> ... next step ... -->
+            </plugin>
+
+
+            <!--plugin>
+                <groupId>org.openapitools</groupId>
+                <artifactId>openapi-generator-maven-plugin</artifactId>
+                <version>4.3.1</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            ####<inputSpec>${project.basedir}/src/main/resources/api.yaml</inputSpec>
+                            <inputSpec>${project.basedir}/src/main/resources/petstore-simple.json</inputSpec>
+                            <apiPackage>com.wm.hack.generated.restservices</apiPackage>
+                            <generatorName>java</generatorName>
+                            <configOptions>
+                                <sourceFolder>src/gen/java/main</sourceFolder>
+                            </configOptions>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin-->
+        </plugins>
+
+    </build>
 
 </project>
