--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
             <version>1.0.0.M20</version>
         </dependency>-->
 
-        <dependency>
+        <!--<dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.8.6</version>
@@ -95,7 +95,7 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.13.1</version>
-        </dependency>
+        </dependency>-->
 
     </dependencies>
 
@@ -107,41 +107,29 @@
             </plugin>
 
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.9</version>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
                 <executions>
                     <execution>
-                        <id>attach-javadocs</id>
+                        <id>oap-sources</id>
+                        <phase>generate-sources</phase>
                         <goals>
-                            <goal>jar</goal>
+                            <goal>add-source</goal>
                         </goals>
                         <configuration>
-                            <additionalparam>${javadoc.opts}</additionalparam>
+                            <sources>
+                                <source>${project.build.directory}/generated-sources/openapi</source>
+                            </sources>
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-site-plugin</artifactId>
-                <version>3.3</version>
-                <configuration>
-                    <reportPlugins>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-javadoc-plugin</artifactId>
-                            <configuration>
-                                <additionalparam>${javadoc.opts}</additionalparam>
-                            </configuration>
-                        </plugin>
-                    </reportPlugins>
-                </configuration>
-            </plugin>
+
 
             <plugin>
                 <groupId>io.openapiprocessor</groupId>
                 <artifactId>openapi-processor-maven-plugin</artifactId>
+<!--                <version>1.0.0.M3-SNAPSHOT</version>-->
                 <version>1.0.0.M2</version>
                 <dependencies>
                     <dependency>
@@ -149,16 +137,20 @@
                         <artifactId>openapi-processor-spring</artifactId>
                         <version>1.0.0.M15</version>
                     </dependency>
-                    <dependency>
+                   <!--<dependency>
                         <groupId>com.github.hauner.openapi</groupId>
                         <artifactId>openapi-processor-json</artifactId>
                         <version>1.0.0.M4</version>
-                    </dependency>
+                    </dependency>-->
                 </dependencies>
 
                 <configuration>
-                    <apiPath>${project.basedir}/src/main/resources/petstore-simple.json</apiPath>
+                    <apiPath>${project.basedir}/src/main/resources/petstore.yaml</apiPath>
                 </configuration>
+
+                <!--<configuration>
+                    <apiPath>${project.basedir}/src/main/resources/petstore-simple.json</apiPath>
+                </configuration>-->
 
 
                 <executions>
@@ -171,11 +163,12 @@
 
                             <!--
                             <apiPath>${project.basedir}/src/api/openapi.yaml</apiPath>
+                            /Users/s0t01a5/Hack/openapigenerator/target
                             -->
                             <options>
                                 <values>
-                                    <targetDir>${project.basedir}/src/main/java/com/wm/open/api/generator/gen</targetDir>
-                                    <!--<mapping>${project.basedir}/src/api/mapping.yaml</mapping>-->
+                                    <targetDir>${project.basedir}/target/generated-sources/openapi</targetDir>
+                                    <mapping>${project.basedir}/src/main/resources/mapping.yaml</mapping>
                                     <parser>OPENAPI4J</parser>
                                     <showWarnings>true</showWarnings>
                                 </values>
